--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -20,8 +20,7 @@
 
 .navButton{
   margin-left: 20px;
-  border: none;
-  padding: 5px 10px;
+  text-decoration: none;
   cursor: pointer;
-  color: #003580;
+  color: white;
 }
