--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -1,14 +1,19 @@
 .footer{
   width: 100%;
-  width: 1024px;
-  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: 15px;
+  background-color: #fff;
 }
 
 .fLists{
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 50px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .fList{
@@ -18,6 +23,10 @@
 
 .fListItem{
   margin-bottom: 10px;
-  color: #003580;
+  color: rgb(0, 73, 59);
   cursor: pointer;
+}
+.fText{
+  color: rgb(0, 73, 59);
+  text-align: center;
 }
