--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,6 +1,10 @@
 .header {
-  background-color: #003580;
+  /* background-color: rgb(0, 73, 59); */
+  background-image: url("https://images.unsplash.com/photo-1596436889106-be35e843f974?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80");
   color: white;
+  background-repeat:repeat-x;
+
+  object-fit: cover;
   display: flex;
   justify-content: center;
   position: relative;
@@ -29,7 +33,8 @@
 }
 
 .headerListItem.active {
-  border: 1px solid white;
+  border: 1px solid rgb(0, 73, 59);
+  background-color: rgb(0, 73, 59);
   padding: 10px;
   border-radius: 20px;
 }
@@ -39,23 +44,24 @@
 }
 
 .headerBtn {
-  background-color: #0071c2;
+  background-color: rgb(0, 73, 59);
   color: white;
   font-weight: 500;
   border: none;
-  padding: 10px;
+  border-radius: 8px;
+  padding: 10px 15px;
   cursor: pointer;
 }
 
 .headerSearch {
   height: 30px;
   background-color: white;
-  border: 3px solid #febb02;
+  border: 2px solid rgb(0, 73, 59);
   display: flex;
   align-items: center;
   justify-content: space-around;
   padding: 10px 0px;
-  border-radius: 5px;
+  border-radius: 10px 0 10px 0;
   position: absolute;
   bottom: -25px;
   width: 100%;
@@ -117,8 +123,8 @@
 .optionCounterButton {
   width: 30px;
   height: 30px;
-  border: 1px solid #0071c2;
-  color: #0071c2;
+  border: 1px solid rgb(0, 73, 59);
+  color: rgb(0, 73, 59);
   cursor: pointer;
   background-color: white;
 }
