--- a/client/src/components/reserve/reserve.css
+++ b/client/src/components/reserve/reserve.css
@@ -12,20 +12,22 @@
 
 .rContainer {
   background-color: white;
+  border-radius: 15px;
   padding: 20px;
   position: relative;
 }
 
 .rClose {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   cursor: pointer;
 }
 
 .rItem {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 50px;
   padding: 20px;
 }
@@ -33,7 +35,7 @@
 .rInfo {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 10px;
 }
 
 .rTitle {
@@ -63,12 +65,19 @@
 .room{
   display: flex;
   flex-direction: column;
+  gap: 2px;
+}
+
+.room>label{
+  color: gray;
+  font-weight: 700;
+  font-size: 10px;
 }
 
 .rButton {
   border: none;
   padding: 10px 20px;
-  background-color: #0071c2;
+  background-color: rgb(0, 73, 59);
   color: white;
   font-weight: bold;
   cursor: pointer;
