--- a/client/src/components/searchItem/searchItem.css
+++ b/client/src/components/searchItem/searchItem.css
@@ -23,7 +23,7 @@
 
 .siTitle {
   font-size: 20px;
-  color: #0071c2;
+  color: rgb(0, 73, 59);
 }
 
 .siDistance {
@@ -35,7 +35,7 @@
   background-color: #008009;
   color: white;
   width: max-content;
-  padding: 3px;
+  padding: 5px 8px;
   border-radius: 5px;
 }
 
@@ -75,7 +75,7 @@
   font-weight: 500;
 }
 .siRating>button{
- background-color: #003580;
+ background-color: rgb(0, 73, 59);
  color: white;
  padding: 5px;
  font-weight: bold;
@@ -99,10 +99,10 @@
 }
 
 .siCheckButton{
-  background-color: #0071c2;
+  background-color: rgb(0, 73, 59);
   color: white;
   font-weight: bold;
-  padding: 10px 5px;
+  padding: 10px 10px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
