--- a/client/src/pages/list/list.css
+++ b/client/src/pages/list/list.css
@@ -13,7 +13,7 @@
 
 .listSearch {
   flex: 1;
-  background-color: #febb02;
+  background-color: rgb(0, 73, 59);
   padding: 10px;
   border-radius: 10px;
   position: sticky;
@@ -23,7 +23,7 @@
 
 .lsTitle{
   font-size: 20px;
-  color: #555;
+  color: #fff;
   margin-bottom: 10px;
 }
 
@@ -40,6 +40,7 @@
 
 .lsItem>input{
   height: 30px;
+  border-radius: 8px;
   border: none;
   padding: 5px;
 }
@@ -49,6 +50,7 @@
   background-color: white;
   display: flex;
   align-items: center;
+  border-radius: 8px;
   cursor: pointer;
 }
 
@@ -60,18 +62,21 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  color: #555;
+  color: #fff;
   font-size: 12px;
 }
 
 .lsOptionInput{
   width: 50px;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
 }
 
 .listSearch>button{
   padding: 10px;
-  background-color: #0071c2;
-  color: white;
+  color: rgb(0, 73, 59);
+  border-radius: 10px;
   border: none;
   width: 100%;
   font-weight: 500;
