--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -1,25 +1,39 @@
 .login {
+  
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url('https://images.unsplash.com/photo-1582719508461-905c673771fd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1925&q=80');
+  background-size: cover;
 }
 
 .lContainer {
+  background-color: rgb(255, 255, 255,0.3);
+  
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  width: 350px;
+  height: 450px;
+  justify-content: center;
+  gap: 20px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  padding: 20px;
+
 }
 
 .lInput{
   height: 30px;
   padding: 10px;
+  border-radius: 10px;
+  border: 1px solid gray;
 }
 
 .lButton {
   border: none;
   padding: 10px 20px;
-  background-color: #0071c2;
+  background-color: rgb(0, 73, 59);
   color: white;
   font-weight: bold;
   cursor: pointer;
@@ -27,6 +41,6 @@
 }
 
 .lButton:disabled{
-  background-color: #0071c28c;
+  background-color: rgb(1, 49, 39);
   cursor: not-allowed;
 }
