--- a/client/src/components/reserve/reserve.css
+++ b/client/src/components/reserve/reserve.css
@@ -77,7 +77,7 @@
 .rButton {
   border: none;
   padding: 10px 20px;
-  background-color: rgb(0, 73, 59);
+  background-color: #7895CB;
   color: white;
   font-weight: bold;
   cursor: pointer;
