--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -22,7 +22,7 @@
   align-items: center;
   gap: 8px;
 }
-.navButton:hover{
+.navButton:hover,.logout:hover{
   margin-left: 20px;
   cursor: pointer;
   background-color: #fff;
@@ -32,7 +32,7 @@
   border-radius: 15px;
   padding: 4px 15px;
 }
-.navButton{
+.navButton, .logout{
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
@@ -42,3 +42,4 @@
   padding: 3px 15px;
   font-size: 14px;
 }
+
