--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -8,7 +8,7 @@
     background-size: cover;
   }
   
-  .rContainer {
+  .registerContainer {
     background-color: rgb(255, 255, 255,0.3);
     display: flex;
     flex-direction: column;
@@ -22,14 +22,14 @@
   
   }
   
-  .rInput{
+  .registerInput{
     height: 30px;
     padding: 10px;
     border-radius: 10px;
     border: 1px solid gray;
   }
   
-  .rButton {
+  .registerButton {
     border: none;
     padding: 10px 20px;
     background-color: rgb(0, 73, 59);
